:hammer: pdf readme"

--- a/example.Rmd
+++ b/example.Rmd
@@ -2,7 +2,7 @@
 title: "Periodicity example"
 author: "Emilio Berti"
 date: "2024-08-07"
-output: html_document
+output: pdf_document
 ---
 
 ```{r setup, include=FALSE}
